--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+main.min.js.map
+
+prepros-6.config
+
 # As Yeoman assumes the usage of Bower and Grunt, ignore the below:
 bower_components
 node_modules
@@ -36,4 +40,3 @@ wp-content/themes/index.php
 wp-content/uploads/
 wp-content/upgrade/
 wp-content/wp-cache-config.php
-
