--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ main.min.js.map
 
 prepros-6.config
 
+/img
+
 # As Yeoman assumes the usage of Bower and Grunt, ignore the below:
 bower_components
 node_modules
